// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMalcolmView renders correctly 1`] = `
<div>
  <Connect(WithStyles(DrawerContainer))
    childMRI=""
    childTitle=""
    parentMRI="test1"
    parentTitle="Test main view"
    popOutAction={[Function]}
  >
    <Connect(WithStyles(BlockDetails))
      parent={true}
    />
    <Connect(WithStyles(MiddlePanelContainer)) />
    <Connect(WithStyles(BlockDetails)) />
  </Connect(WithStyles(DrawerContainer))>
</div>
`;

exports[`MainMalcolmView renders info if child block is .info 1`] = `
<div>
  <Connect(WithStyles(DrawerContainer))
    childMRI=".info"
    childTitle="Info"
    parentMRI="test1"
    parentTitle="Test main view"
    popOutAction={[Function]}
  >
    <Connect(WithStyles(BlockDetails))
      parent={true}
    />
    <Connect(WithStyles(MiddlePanelContainer)) />
    <Connect(InfoDetails) />
  </Connect(WithStyles(DrawerContainer))>
</div>
`;

exports[`MainMalcolmView renders palette if child block is .palette 1`] = `
<div>
  <Connect(WithStyles(DrawerContainer))
    childMRI=".palette"
    childTitle="Palette"
    parentMRI="test1"
    parentTitle="Test main view"
    popOutAction={[Function]}
  >
    <Connect(WithStyles(BlockDetails))
      parent={true}
    />
    <Connect(WithStyles(MiddlePanelContainer)) />
    <Connect(WithStyles(Palette)) />
  </Connect(WithStyles(DrawerContainer))>
</div>
`;
